attempted to add movability to pieces and make squares of fixed size (previously getting squished)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,11 +74,10 @@ main {
 /* Chessboard Styles */
 #chess-board {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(8, 50px);
+    grid-template-rows: repeat(8, 50px);
     gap: 0;
     margin: 1em auto;
-    width: 400px;
-    height: 400px;
 }
 
 #chess-board div {
@@ -96,4 +95,5 @@ main {
 #chess-board .black {
     background-color: #341D18; /* Dark brown */
 }
+
 
